testsuite/tests/grammar/invalid_lexers/token_action_5.lkt
import common

lexer foo_lexer {
    @ignore @text() example <- "example"
}
